# assimpts

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
demo/: index.html  tsconfig.json  vite.config.ts
examples/: example.html
scripts/: activate-emscripten.js  activate-emscripten.ps1  activate-emscripten.sh  build.js  build.ps1  build.sh  install-emscripten.js  install-emscripten.ps1  install-emscripten.sh
src/: main.cpp  post_process.hpp  util.h  web_io.cpp  web_io.hpp
